# FiniteVolumeSolver

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CMakeLists.txt  Compare_BK19RKLM.py  Plot_BK19.ipynb  Plot_BK19.py  README.html  README.md  conanfile.txt
cmake/: FindSundials.cmake  FindTBB.cmake  version.cmake
conan/: conanfile-AMReX-devel.py  conanfile-AMReX-stable.py  conanfile-HDF5.py  conanfile-SAMRAI-stable.py  conanfile-VC.py
docker/: ListCreatedDockerImages.txt  README.md  Readme.md  amrex-clang_base_image  amrex-gcc_base_image  amrex_2d-clang5  amrex_2d-clang6  amrex_2d-clang7  amrex_2d-clang8  amrex_2d-gcc7  amrex_2d-gcc8  amrex_3d-gcc7  amrex_3d-gcc8  build_images.sh  docker_commands.txt  gcc7_amrex2d  gcc8_amrex2d  testbuild_image
docs/: CMakeLists.txt  Doxyfile.in  README.bs  README.html  References.bib
docs/presentations/Design Overview/: design_overview.tex  fu-beamer-template.tex
docs/presentations/SAMRAI_vs_AMReX/: CMakeCache.txt  SAMRAI_vs_AMReX.aux  SAMRAI_vs_AMReX.nav  SAMRAI_vs_AMReX.out  SAMRAI_vs_AMReX.tex  SAMRAI_vs_AMReX.toc  SAMRAI_vs_AMReX.vrb  bilder.ipe  fu-beamer-template.aux  fu-beamer-template.tex  patch.ipe
examples/: CMakeLists.txt  ExactRiemannProblem.cpp  FlameMasterReactor_Advance.cpp  FlameMasterSolver.cpp  ForwardEulerTimeIntegrator.cpp  HyperbolicSystemSolver.cpp  HyperbolicSystemSourceSolver.cpp  Jacobian.cpp  KineticDriver.cpp  PlotSchardin.py  TChemSolver.cpp  TChem_Advance.cpp  benchmark.TChem.Aramco.cpp  benchmark.TChem.Zhao.cpp  benchmark.TChem.cpp  boost_fiber.cpp  small_eps.cpp
examples/AMReX/: Advection.cpp  Advection2d.cpp  Advection2d_Godunov.cpp  Advection2d_Godunov.py  Advection2d_MUSCLHancock.cpp  Advection2d_MUSCLHancock.py  AxialVariation.cpp  BK19Compressible_AcousticWave.cpp  BK19Compressible_AcousticWaveWall.cpp  BK19Compressible_TravellingVortex.cpp  BK19Compressible_TravellingVortex2.cpp  BK19Compressible_VortexCoriolis.cpp  BK19PseudoInc_TravellingVortex.cpp  BK19PseudoInc_VortexCoriolis.cpp  BK19_Input.py  BK19_InputAcousticWave.py  BK19_InputAcousticWaveWall.py  BK19_InputTravellingVortex.py  BK19_InputTravellingVortex2.py  Burke2012.cpp  CompressibleAdvection.cpp  GreshoVortex.cpp  IdealGasMix.cpp  IdealGasMix.py  IdealGasMix2.cpp  IdealGasMix_Advection.cpp  IdealGasMix_Advection.py  InitialHierarchy.cpp  NodalPoisson.cpp  NodalProjectionSingleLevel.cpp  PerfectGas1d.cpp  PerfectGas1d_Char.cpp  PerfectGas1d_Char.py  PerfectGas1d_ThirdOrder.cpp  PerfectGas1d_ThirdOrder.py  PerfectGas2d.cpp  PerfectGas3d.cpp  PerfectGasMix1d.cpp  PerfectGasMix1d.py  PerfectGasMix1d_Arrhenius.cpp  (+17 more)
examples/AMReX/EB/: ConvergentNozzle.cpp  ConvergentNozzle.py  CoupledLinearShock2d.cpp  CoupledLinearShock3d.cpp  Divider.cpp  Divider2D.cpp  LinearShock2d.cpp  LinearShock3d.cpp  LinearShock3d.py  MultiTube.cfg  MultiTube.cpp  MultiTube.py  MultiTube_Compressor.cfg  MultiTube_Compressor.cpp  MultiTube_Compressor.py  MultiTube_PerfectGas.cpp  MultiTube_PerfectGas.py  Ramp.cpp  Ramp2.cpp  Schardin.cpp  ShockTube.cpp  SingleTubePlenum.cpp  SingleTubeRing.cpp  SingleTubeRing.py  SingleTubeRingPlenum.cpp  Tube.cpp  Wedge.cpp
examples/AMReX/EB/2D/: ConvergentNozzle.cpp  ConvergentNozzle.py  ConvergentNozzleAxiSymmetric.cpp  ConvergentNozzleAxiSymmetric.py  ConvergentNozzle_SEC.cpp  CoupledLinearShock2d.cpp  Deflagration_Plenum_Arrhenius.cpp  Deflagration_Plenum_Arrhenius.py  Divider2D-docker.py  Divider2D.cpp  Divider2D.py  Divider2D_AxiSymmetric.cpp  Divider2D_AxiSymmetric.py  Divider2D_MassFlow_AxiSymmetric.cpp  Divider2D_MassFlow_AxiSymmetric.py  Divider2D_MassFlow_AxiSymmetric_Multiblock.cpp  Divider2D_MassFlow_AxiSymmetric_Multiblock.py  LinearShock2d.cpp  LinearShock2d.py  LinearShock2d_PerfectGasMix.cpp  LinearShockAxiSymmetric.cpp  LinearShockAxiSymmetric.py  Ramp.cpp  Ramp.py  Ramp2.cpp  RunSEC_Plenum.py  RunSEC_Plenum_Arrhenius.py  SEC_Plenum.cpp  SEC_Plenum.py  SEC_Plenum_Arrhenius.cpp  SEC_Plenum_Arrhenius.py  SEC_Plenum_Arrhenius_cutcellfriendly.py  SEC_Plenum_Arrhenius_oneTube.py  SEC_Plenum_Arrhenius_oneTube_longPlenum.py  SEC_Plenum_Arrhenius_slanted.cpp  SEC_Plenum_Arrhenius_slanted.py  SEC_Plenum_Arrhenius_symmetry.cpp  Schardin.cpp  Schardin.py  ShockTube.cpp  (+10 more)
examples/AMReX/EB/2D/Divider/AxiSymmetric/: body.txt  wall.txt
examples/AMReX/EB/2D/Divider/De1/: wall_2.txt
examples/AMReX/EB/2D/Divider/De4/: D4_Geom.m  wall_2.txt
examples/AMReX/EB/2D/Divider/De5/: D5_Geom.m  wall_1.txt  wall_3.txt
examples/AMReX/EB/2D/Divider2D_MassFlow_AxiSymmetric/: wall.txt
examples/AMReX/EB/3D/: ConvergentNozzle.cpp  CoupledLinearShock3d.cpp  Divider.cpp  LinearShock3d.cpp  LinearShock3d.py  MultiTube.cpp  MultiTube.py  MultiTube_Compressor.cpp  MultiTube_PerfectGas.cpp  MultiTube_PerfectGas.py  MultiTube_blocking.cpp  SingleTubePlenum.cpp  SingleTubeRing.cpp
examples/Eigen/: TensorConcatenate.cpp
examples/Equations/: Advection.cpp  Burgers.cpp  ShallowWater.cpp  ShallowWater_Driver.cpp  plot.cpp
examples/SAMRAI/: Advection.cpp  Advection2d.cpp  Advection2d_Godunov.cpp  Box.cpp  Burgers1d.cpp  PatchHierarchyExample.cpp  PerfectGas1d.cpp  PerfectGas2d.cpp  PerfectGas3d.cpp  ShallowWater2d.cpp  VariableDatabase.cpp  coarsen_sideflux.cpp
extra/: Burke.inp  (+24 more)
tests/: CMakeLists.txt  benchmark.HlleGodunovMethod.cpp  test.AMReX.DebugOutput.cpp  test.AMReX.EB.Cylinder.cpp  test.AMReX.EB.plane_nan.cpp  test.AMReX.MultiCutFab.cpp  test.AMReX.average_down.cpp  test.AMReX.n_proper.cpp  test.AMReX.tilebox.cpp  test.Eigen.cpp  test.FlameMasterReactor.cpp  test.Geometry.Polygon.cpp  test.HyperbolicSplitPatchIntegrator.cpp  test.NewStates.cpp  test.ParallelBuffer.cpp  test.PerfectGas.ExactRiemannProblem.cpp  test.SimpleGrid.cpp  test.State.cpp  test.TChemReactor.cpp  test.VariableDescription.cpp  test.core.mdspan.cpp  test.core.span.cpp  test.ideal_gas.IdealGasEquation.cpp  test.ode_solver.Radau.cpp  test.simd_FluxMethod.cpp  test.solver.IdealGasSplitIntegrator.cpp  text.AMReX.FluxMethod.cpp
tests/benchmark/: Advection.cpp  HyperbolicSplitPatchIntegrator.cpp  PerfectGas.cpp  ShallowWater.cpp
(+907 files in other folders)
